1. Add ReadMe file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   frontend:
     build:
-      context: ./zania
+      context: .
       dockerfile: Dockerfile
     ports:
       - '80:80'
